# llms

./: .gitignore  LICENSE  README.ja.md  README.md  install.sh  pyproject.toml
.github/: CODEOWNERS
src/llms/: __main__.py  cli.py  client.py  clipboard.py  fetcher.py  formatter.py  query.py  selector.py
tests/: conftest.py  test_cli_subcommands.py  test_client.py  test_fetcher.py  test_formatter.py  test_query.py
