[project]
name = "llms"
version = "0.1.0"
description = "Fuzzy search LLM models from models.dev"
readme = "README.md"
authors = [
    { name = "KuragariKurage", email = "22191637+KuragariKurage@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "platformdirs>=4.0",
]

[project.scripts]
llms = "llms.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]
